# pbpctrl

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml  build.rs
cli/src/: bt.rs  cli.rs  main.rs
docs/: Notes.md
libgfps/: Cargo.toml
libgfps/examples/: get_battery.rs  gfps-listen.rs  gfps_get_battery.rs  gfps_listen.rs  listen.rs  ring.rs
libgfps/src/: lib.rs
libgfps/src/msg/: codec.rs  mod.rs  types.rs
libmaestro/: Cargo.toml  build.rs
libmaestro/examples/: maestro-listen.rs  maestro_get_battery.rs  maestro_listen.rs  maestro_read_settings.rs  maestro_write_settings.rs
libmaestro/examples/common/: mod.rs
libmaestro/proto/: maestro.proto  maestro_pw.proto  pw.rpc.packet.proto
libmaestro/src/: lib.rs
libmaestro/src/hdlc/: codec.rs  consts.rs  crc.rs  decoder.rs  encoder.rs  mod.rs  varint.rs
libmaestro/src/protocol/: addr.rs  codec.rs  mod.rs  utils.rs
libmaestro/src/pwrpc/: client.rs  codec.rs  id.rs  mod.rs  status.rs  types.rs  utils.rs
libmaestro/src/service/: mod.rs  settings.rs
libmaestro/src/service/impls/: dosimeter.rs  maestro.rs  mod.rs  multipoint.rs
tui/: Cargo.toml
tui/src/: app.rs  bt.rs  cli_client.rs  maestro_client.rs  main.rs  ui.rs
