[package]
name = "pbpctrl"
authors = ["Maximilian Luz <m@mxnluz.io>"]
version = "0.1.7"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Command-line utility for controlling Google Pixel Buds Pro"
repository = "https://github.com/qzed/pbpctrl"

[dependencies]
anyhow = "1.0.89"
bluer = { version = "0.17.3", features = ["bluetoothd", "rfcomm"] }
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
maestro = { path = "../libmaestro" }
tokio = { version = "1.40.0", features = ["rt", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
bluer = { version = "0.17.3" }
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
maestro = { path = "../libmaestro" }
