[package]
name = "pbpctrl"
authors = ["Maximilian Luz <m@mxnluz.io>"]
version = "0.1.7"
edition = "2024"
license = "MIT/Apache-2.0"
description = "Command-line utility for controlling Google Pixel Buds Pro"
repository = "https://github.com/qzed/pbpctrl"

[dependencies]
anyhow = "1.0.95"
bluer = { version = "0.17.3", features = ["bluetoothd", "rfcomm"] }
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
maestro = { path = "../libmaestro" }
tokio = { version = "1.42.0", features = ["rt", "macros", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
bluer = { version = "0.17.3" }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
maestro = { path = "../libmaestro" }
