[package]
name = "pbpctrl"
authors = ["Maximilian Luz <m@mxnluz.io>"]
version = "0.1.8"
edition = "2024"
license = "MIT/Apache-2.0"
description = "Command-line utility for controlling Google Pixel Buds Pro"
repository = "https://github.com/qzed/pbpctrl"

[dependencies]
anyhow = "1.0.98"
bluer = { version = "0.17.3", features = ["bluetoothd", "rfcomm"] }
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
maestro = { path = "../libmaestro" }
tokio = { version = "1.44.2", features = ["rt", "macros", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
bluer = { version = "0.17.3" }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.47"
maestro = { path = "../libmaestro" }
