[package]
name = "gfps"
authors = ["Maximilian Luz <m@mxnluz.io>"]
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Google Fast Pair Service (GFPS) protocol client library"
repository = "https://github.com/qzed/pbpctrl"

[dependencies]
bytes = "1.7.2"
num_enum = "0.7.3"
smallvec = { version = "1.13.2", features = ["union"] }
tokio = "1.40.0"
tokio-util = { version = "0.7.12", features = ["codec"] }
uuid = "1.10.0"

[dev-dependencies]
bluer = { version = "0.17.3", features = ["bluetoothd", "rfcomm"] }
futures = "0.3.31"
pretty-hex = "0.4.1"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
