[package]
name = "gfps"
authors = ["Maximilian Luz <m@mxnluz.io>"]
version = "0.1.2"
edition = "2024"
license = "MIT/Apache-2.0"
description = "Google Fast Pair Service (GFPS) protocol client library"
repository = "https://github.com/qzed/pbpctrl"

[dependencies]
bytes = "1.9.0"
num_enum = "0.7.3"
smallvec = { version = "1.13.2", features = ["union"] }
tokio = "1.42.0"
tokio-util = { version = "0.7.13", features = ["codec"] }
uuid = "1.11.0"

[dev-dependencies]
bluer = { version = "0.17.3", features = ["bluetoothd", "rfcomm"] }
futures = "0.3.31"
pretty-hex = "0.4.1"
tokio = { version = "1.42.0", features = ["rt", "macros"] }
