[package]
name = "maestro"
authors = ["Maximilian Luz <m@mxnluz.io>"]
version = "0.1.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Maestro protocol client implementation for controlling Google Pixel Buds Pro"
repository = "https://github.com/qzed/pbpctrl"

[dependencies]
arrayvec = "0.7.4"
bytes = "1.5.0"
futures = "0.3.28"
num_enum = "0.7.0"
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["macros"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
tracing = "0.1.39"
uuid = "1.4.1"

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
anyhow = "1.0.75"
bluer = { version = "0.16.1", features = ["bluetoothd", "rfcomm"] }
futures = "0.3.28"
pretty-hex = "0.3.0"
tokio = { version = "1.33.0", features = ["rt", "macros", "signal"] }
tracing-subscriber = "0.3.17"
