[package]
name = "pbpctui"
authors = ["Cikki <jasoncheng@hifuu.ink>"]
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
description = "TUI utility for pbpctrl"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
regex = "1.10.4"
