[package]
name = "pbpctui"
authors = ["Cikki <jasoncheng@hifuu.ink>"]
version = "0.1.5"
edition = "2024"
license = "MIT/Apache-2.0"
description = "TUI utility for pbpctrl"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
regex = "1.10.4"
maestro = { path = "../libmaestro" }
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
futures = "0.3.31"
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
